# peak-grouping-alignment

./: .gitignore  README.md
MW/: IntervalTree.py  MW.py  alignment.py  clustering.py  matching.py  models.py
MW_alignment/: MW.py  alignment.py  clustering.py  matching.py  models.py  pq.py  utils.py
SIMA/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.txt  SIMA.64bit  cmake_install.cmake  config.h.cmake  convertXML.m  install_manifest.txt
SIMA/data/: README.txt
SIMA/data/Lange_comparison/M1/: PL1-10.txt  PL1-11.txt  PL1-12.txt  PL1-13.txt  PL1-14.txt  PL1-15.txt  PL1-16.txt  PL1-17.txt  PL1-18.txt  PL1-19.txt  PL1-20.txt  PL1-21.txt  PL1-22.txt  PL1-23.txt  PL1-24.txt  PL1-25.txt  PL1-26.txt  PL1-27.txt  PL1-28.txt  PL1-29.txt  PL1-3.txt  PL1-30.txt  PL1-31.txt  PL1-32.txt  PL1-33.txt  PL1-34.txt  PL1-35.txt  PL1-36.txt  PL1-37.txt  PL1-38.txt  PL1-39.txt  PL1-4.txt  PL1-40.txt  PL1-41.txt  PL1-42.txt  PL1-43.txt  PL1-44.txt  PL1-5.txt  PL1-7.txt  PL1-8.txt  (+1 more)
SIMA/data/Lange_comparison/M1_test/: PL1-1.txt  PL1-2.txt  PL1-6.txt
SIMA/data/Lange_comparison/M1_test/results/: result.txt
SIMA/data/Lange_comparison/M2/: PL1-1.txt  PL1-10.txt  PL1-11.txt  PL1-12.txt  PL1-13.txt  PL1-14.txt  PL1-15.txt  PL1-16.txt  PL1-17.txt  PL1-18.txt  PL1-19.txt  PL1-2.txt  PL1-20.txt  PL1-21.txt  PL1-22.txt  PL1-23.txt  PL1-24.txt  PL1-3.txt  PL1-4.txt  PL1-5.txt  PL1-6.txt  PL1-7.txt  PL1-8.txt  PL1-9.txt
SIMA/data/Lange_comparison/P1/1/: PL1-1.txt  PL1-2.txt
SIMA/data/Lange_comparison/P1/1/results/: result.txt
SIMA/data/Lange_comparison/P1/3/: PL3-1.txt  PL3-2.txt
SIMA/data/Lange_comparison/P1/4/: PL4-1.txt  PL4-2.txt
SIMA/data/Lange_comparison/P1/5/: PL5-1.txt  PL5-2.txt
SIMA/data/Lange_comparison/P1/6/: PL6-1.txt  PL6-2.txt
SIMA/data/Lange_comparison/P2/1/: PL1-1.txt  PL1-2.txt  PL1-3.txt
SIMA/data/Lange_comparison/P2/1/results/: result (joewandy-PC's conflicted copy 2013-11-12).txt  result.txt
SIMA/data/Lange_comparison/P2/2/: PL2-1.txt  PL2-2.txt  PL2-3.txt
SIMA/data/Lange_comparison/P2/3/: PL3-1.txt  PL3-2.txt  PL3-3.txt
SIMA/data/Lange_comparison/P2/4/: PL4-1.txt  PL4-2.txt  PL4-3.txt
SIMA/data/Lange_comparison/P2/5/: PL5-1.txt  PL5-2.txt  PL5-3.txt
SIMA/data/data_charge/: PL_1.txt  PL_2.txt  PL_3.txt  PL_4.txt
SIMA/data/data_charge/results_reference/: result.txt
SIMA/data/data_simple/: PL_cos.txt  PL_mz_noise.txt  PL_rt_noise.txt  PL_sin.txt
SIMA/data/data_simple/results_reference/: result.txt
SIMA/examples/: CMakeLists.txt  CTestTestfile.cmake  Makefile  SIMA  SIMA (joewandy-PC's conflicted copy 2013-11-12)  SIMA.cpp  cmake_install.cmake
SIMA/include/ms++/: Alignment.h  Collection.h  DistanceMatrix.h  Error.h  Log.h  MahalanobisDistance.h  Peak.h  PeakList.h  PeakListCollection.h  StableMarriage.h  config.h
SIMA/include/ms++/private/: PeakListBase.h  PeakListPrivate.h  Singleton.h
SIMA/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
SIMA/lib/vigra/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
SIMA/lib/vigra/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
SIMA/lib/vigra/include/vigra/: CMakeLists.txt  CTestTestfile.cmake  Makefile  accessor.hxx  affine_registration.hxx  affinegeometry.hxx  array_vector.hxx  basicgeometry.hxx  basicimage.hxx  basicimageview.hxx  bordertreatment.hxx  boundarytensor.hxx  cmake_install (joewandy-PC's conflicted copy 2013-11-12).cmake  cmake_install.cmake  codec.hxx  colorconversions.hxx  combineimages.hxx  config.hxx  contourcirculator.hxx  convolution.hxx  copyimage.hxx  cornerdetection.hxx  diff2d.hxx  distancetransform.hxx  edgedetection.hxx  eigensystem.hxx  error.hxx  exclusive_lars.hxx  fftw.hxx  fftw3.hxx  fixedpoint.hxx  flatmorphology.hxx  functorexpression.hxx  functortraits.hxx  gaborfilter.hxx  gaussians.hxx  gradient_energy_tensor.hxx  imagecontainer.hxx  imageinfo.hxx  imageiterator.hxx  (+73 more)
SIMA/lib/vigra/src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
SIMA/lib/vigra/src/impex/: CMakeLists.txt  CTestTestfile.cmake  Makefile  auto_file.hxx  bmp.cxx  bmp.hxx  byteorder.cxx  byteorder.hxx  cmake_install (joewandy-PC's conflicted copy 2013-11-12).cmake  cmake_install.cmake  codecmanager.cxx  codecmanager.hxx  error.hxx  gif.cxx  gif.hxx  hdr.cxx  hdr.hxx  iccjpeg.c  iccjpeg.h  imageinfo.cxx  jpeg.cxx  jpeg.hxx  png.cxx  png.hxx  pnm.cxx  pnm.hxx  rgbe.c  rgbe.h  sun.cxx  sun.hxx  tiff.cxx  tiff.hxx  viff.cxx  viff.hxx  void_vector.cxx  void_vector.hxx
SIMA/lib/vigra/test/include/: unittest.hxx
SIMA/src/: Alignment.cpp  CMakeLists.txt  CTestTestfile.cmake  DistanceMatrix.cpp  Log.cpp  MahalanobisDistance.cpp  Makefile  Peak.cpp  PeakList.cpp  PeakListBase.cpp  PeakListCollection.cpp  PeakListPrivate.cpp  StableMarriage.cpp  cmake_install.cmake
SIMA/stdout/: result.txt
SIMA/tests/: Alignment-test.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  PeakListCollection-test.cpp  all-test.cpp  cmake_install.cmake  stablemarriage-test.cpp
experiments/: README.md  parameter_scan_glyco.sh  parameter_scan_glyco_mwg.sh  parameter_scan_glyco_mwm.sh  parameter_scan_glyco_tools.sh  parameter_scan_meta.sh  parameter_scan_meta_mwg_ps.sh  parameter_scan_meta_mwg_rt.sh  parameter_scan_meta_mwm.sh  parameter_scan_meta_tools.sh  process_P1.sh  process_P1_greedy.sh  process_P1_mixture.sh  process_P2.sh  process_P2_greedy.sh  process_P2_mixture.sh  process_glyco.sh  process_glyco_greedy.sh  process_glyco_mixture.sh  process_meta.sh  process_meta_greedy_ps.sh  process_meta_greedy_rt.sh  process_meta_mixture.sh  run_P1.sh  run_P2.sh
input_data/: README.md
input_data/M1/: M1_1.featureXML  M1_1.txt  M1_10.featureXML  M1_10.txt  M1_11.featureXML  M1_11.txt  M1_12.featureXML  M1_12.txt  M1_13.featureXML  M1_13.txt  M1_14.featureXML  M1_14.txt  M1_15.featureXML  M1_15.txt  M1_16.featureXML  M1_16.txt  M1_17.featureXML  M1_17.txt  M1_18.featureXML  M1_18.txt  M1_19.featureXML  M1_19.txt  M1_2.featureXML  M1_2.txt  M1_20.featureXML  M1_20.txt  M1_21.featureXML  M1_21.txt  M1_22.featureXML  M1_22.txt  M1_23.featureXML  M1_23.txt  (+56 more)
(+874 files in other folders)
