INCLUDE_DIRECTORIES(
    ${MSPP_SOURCE_DIR}/include
    ${MSPP_SOURCE_DIR}/lib/vigra/include
)
LINK_DIRECTORIES(
    ${MSPP_BINARY_DIR}/src
)


SET(SRCS_SIMA SIMA.cpp)

ADD_EXECUTABLE(SIMA ${SRCS_SIMA})

TARGET_LINK_LIBRARIES(SIMA ms++)

INSTALL(TARGETS
SIMA
RUNTIME DESTINATION bin/examples)


